--- a/phys-4032/hw-3/hw-3-completed.tex
+++ b/phys-4032/hw-3/hw-3-completed.tex
@@ -138,7 +138,13 @@ obeys Ampere's law with Maxwell's displacement current term.
 Part b will be considered as extra credit in case you want to turn-in this corrected version.
 
 \subsubsection*{------------------------------------------Solution-----------------------------------------------}
-Note that since I don't want to install additional \LaTeX  packages and switch to manual typesetting, I will use $R$ as the separation vector.
+Note that since I don't want to install additional \LaTeX  packages and switch to manual typesetting, I will use $R$ as the separation vector $|R| =: |\vec{r} - \overrightarrow{r}'| $\\
+
+As a reminder, the full Maxwell-Ampère law is
+\begin{equation}
+\nabla \times \vec{B}(\vec{r}) = \mu_0\vec{J}(\vec{r}) + \mu_0\epsilon_0\frac{\partial}{\partial t} \Big[\vec{E}(\vec{r}, t)\Big]
+	\label{eq:maxwell-ampere-law}
+\end{equation}
 
 \subsubsection*{-----------------------------------------------------------------------------------------------------}
 
