--- a/phys-4032/hw-3/hw-3-completed.tex
+++ b/phys-4032/hw-3/hw-3-completed.tex
@@ -172,7 +172,10 @@ Therefore
 $$ \vec{J}(\overrightarrow{r}')\nabla \cdot \left[\frac{\vec{r} - \overrightarrow{r}'}{|\vec{r} - \overrightarrow{r}'|^3}\right] \quad\rightarrow\quad 4\pi\vec{J}(\overrightarrow{r}')\delta^3(\vec{r} - \overrightarrow{r}') $$
 Making this substitution into integral given in the problem statement,
 $$ \boxed{\vec{B}(\vec{r})=\frac{\mu_0}{4 \pi} \int 4\pi\vec{J}(\overrightarrow{r}')\delta^3(\vec{r} - \overrightarrow{r}') d \tau^{\prime} = \mu_0\vec{J}(\vec{r})} $$
-This is not the end of the problem, as we are not working with a time-independent configuration.
+This is not the end of the problem, as we are not working with a time-independent configuration.\\
+
+Continuing, we consider the time dependent electric field term in Eq [\ref{eq:maxwell-ampere-law}]:
+$$  \mu_0\epsilon_0 \frac{\partial}{\partial t} \Big[\vec{E}(\vec{r}, t)\Big] $$
 
 \subsubsection*{-----------------------------------------------------------------------------------------------------}
 
